# Valit

./: CMakeLists.txt
examples/: Allgemeiner_Ambulanzbefund_-_codiert.xml
schemavalidator/: CMakeLists.txt  Events.h  ParseLineException.h  States.h  XMLDoc.cpp  XMLDoc.h  XMLEventGenerator.cpp  XMLEventGenerator.h  main.cpp
